expose line ending as a header parameter, add HTTP tests
