# openapi.yaml
@@ -307,6 +307,12 @@ paths:
           example: "rs4f9915"
           schema:
             type: string
+        - name: X-Line-Ending
+          in: header
+          description: Optional Line Ending allows application developer to alter line ending of the file data returned
+          example: "\r\n"
+          schema:
+            type: string
         - name: fileID
           in: path
           description: File ID
